fix: align search and detail including tests with parameter mgmt

--- a/src/app/announcement/announcement-search/announcement-search.component.scss
+++ b/src/app/announcement/announcement-search/announcement-search.component.scss
@@ -29,8 +29,7 @@
   .max-height-for-2-lines {
     max-height: 2.5rem;
   }
-
-  .announcement-title {
+  .text-ellipsis-2-lines {
     @include displaying-text-ellipsis(2);
   }
 }
